# AAA-Progect

./: .gitignore
src/FixedRouteplanner/: CMakeLists.txt  package.xml
src/FixedRouteplanner/include/: rtk_planner.h
src/FixedRouteplanner/src/: main.cpp  rtk_planner.cpp
src/FixedRouteplanner/text/: trajectory_control_test.txt  trajectory_half.txt
src/FixedRouteplanner/text/F3/: trajectory3f.txt
src/SimulatedData/: CMakeLists.txt  package.xml
src/SimulatedData/include/: simulated_data.h
src/SimulatedData/src/: main.cpp  simulated_data.cpp
src/SimulatedData/text/: data_error.txt
src/SimulatedData/text/F3/: enter_elevator_path.txt
src/a_star/src/a_star/: CMakeLists.txt  package.xml
src/emplanner/: CMakeLists.txt  README.md  README_QUICK_START.md  package.xml  task.md  yaml_config.yaml
src/emplanner/RL_DP/: CMakeLists.txt  cpp_onnx_infer_example.cpp  cpp_rollout_visualize.cpp  dp_infer.cpp  dp_planner.cpp  dp_planner.h  dp_policy.cpp  dp_policy.h  rl_dp.cpp  rl_dp.h  rl_dp_test.cpp
src/emplanner/benchmark_results/complex_random_l19_feasible/: dp_path.csv  obstacles.csv  summary.txt
src/emplanner/benchmark_results/complex_random_l19_ok/: dp_path.csv  obstacles.csv  qp_path.csv  summary.txt
src/emplanner/benchmark_results/csv_shortcut_smoke/: straight_trajectory.txt  summary.txt
src/emplanner/benchmark_results/curve_turn30_demo/: dp_grid_points.csv  dp_path.csv  obstacles.csv  qp_path.csv  reference_path.csv  straight_trajectory.txt  summary.txt
src/emplanner/benchmark_results/curve_turn30_feasible/: reference_path.csv  straight_trajectory.txt  summary.txt
src/emplanner/benchmark_results/grid_overlay_demo/: dp_path.csv  qp_path.csv  summary.txt
src/emplanner/benchmark_results/hang_probe_case/: speed_profile.csv  st_dp_path.csv  summary.txt
src/emplanner/benchmark_results/my_30_tuned_case/: dp_grid_points.csv  dp_path.csv  obstacles.csv  qp_path.csv  summary.txt
src/emplanner/benchmark_results/my_st_case/: obstacles.csv  speed_profile.csv  st_dp_path.csv  st_lattice.csv  st_obstacles.csv  straight_trajectory.txt  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed/: obstacles.csv  speed_profile.csv  st_dp_path.csv  st_lattice.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed_autofix/: obstacles.csv  st_obstacles.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed_nothresh/: st_lattice.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed_safe025/: obstacles.csv  speed_profile.csv  st_dp_path.csv  st_lattice.csv  st_obstacles.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed_safe025_dpfix/: speed_profile.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_fixed_safe025_replay/: st_lattice.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay/: obstacles.csv  qp_path.csv  speed_profile.csv  speed_profile_smoothed.csv  st_dp_path.csv  st_lattice.csv  st_obstacles.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_corridorcost/: speed_profile.csv  st_dp_path.csv  st_lattice.csv  st_obstacles.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_safe010/: st_dp_path.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_safe010_qpa12/: st_lattice.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_v0fix/: speed_profile.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_v0fix2/: speed_profile.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_verify/: speed_profile.csv  st_dp_path.csv  st_lattice.csv  st_obstacles.csv  summary.txt
src/emplanner/benchmark_results/my_st_case_replay_vmax16/: st_dp_path.csv  st_lattice.csv  summary.txt
src/emplanner/benchmark_results/my_st_csv_case/: summary.txt
src/emplanner/benchmark_results_paper_res/: readme.md
src/emplanner/include/: emplanner.hpp
src/emplanner/launch/: compare_benchmark.launch  compare_benchmark_paper.launch  compare_benchmark_st_crossing.launch  compare_benchmark_st_multi.launch  compare_benchmark_st_single.launch
src/emplanner/rl_dp/: .gitignore  README_RL_DP.md
src/emplanner/scripts/: plot_compare.py  plot_experiment_summary.py  plot_st_graph.py  run_compare_benchmark.sh  run_compare_benchmark_st_multi.sh  run_compare_benchmark_st_single.sh  run_turn_angle_experiments.sh
src/emplanner/src/: compare_benchmark.cpp  emplanner.cpp  main.cpp
src/emplanner/text/: data_watch.txt  elevator_path_op.txt  trajectory1F.txt
src/emplanner_rviz_sim/: CMakeLists.txt  package.xml
src/emplanner_rviz_sim/src/: rviz_sim_node.cpp
src/hybrid_aStar/: CHATGPT_HANDOFF.md  CMakeLists.txt  README_TRANSFORMER_FRONTEND.md  package.xml  readme.md
src/hybrid_aStar/app/: frontend_random_map_env.cpp  frontend_street_map_env.cpp  offline_guided_astar_cpp_demo.cpp  random_parking_env.cpp  run_hybrid_astar.cpp  smooth_path_cli.cpp
src/hybrid_aStar/launch/: random_parking_env.launch  run_hybrid_a_star.launch  run_transformer_guided_astar_random_env.launch  run_transformer_guided_astar_street_env.launch
src/hybrid_aStar/maps/: map_1F.pgm  map_1F.yaml
src/hybrid_aStar/rviz/: display_hybrid_astar.rviz  guided_astar_random_env.rviz  guided_astar_street_env.rviz  vertical_parking_env.rviz
src/hybrid_aStar/scripts/: benchmark_street_planners.py  benchmark_trap_planners.py  convert_ros_map_to_frontend_request.py  frontend_street_map_env.py  offline_street_guided_astar_demo.py  offline_street_guided_astar_montage.py  plot_street_batch_paper_experiments.py  plot_street_frontend_ablation_pub.py  save_curvature_png.py
src/hybrid_aStar/src/: costmap_subscriber.cpp  goal_pose_subscriber.cpp  guided_frontend_onnx.cpp  hybrid_a_star.cpp  hybrid_a_star_flow.cpp  init_pose_subscriber.cpp  rs_path.cpp
src/path1/Record_Path/: CMakeLists.txt  package.xml
src/path1/path_optimization/: CMakeLists.txt  package.xml
src/planner/: CMakeLists.txt  package.xml
src/planner/include/: planner.h
src/planner/src/: main.cpp  planner.cpp
src/planner/text/: trajectory01.txt  trajectory_105.txt  trajectory_1F_01.txt
(+586 files in other folders)
