<?xml version="1.0"?>
<package format="2">
  <name>emplanner_rviz_sim</name>
  <version>0.0.1</version>
  <description>Simple RViz simulator that drives EMPlanner with synthetic car state and obstacle topics.</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>planning_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>emplanner</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>planning_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>emplanner</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>planning_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>emplanner</exec_depend>
  <exec_depend>planner</exec_depend>

  <export/>
</package>
